Update Supabase credentials in index.html

--- a/index.html
+++ b/index.html
@@ -1653,8 +1653,8 @@
         
         // Credenciales Supabase
         const MIS_CREDENCIALES = {
-            URL: 'https://zpxyxkrgeakyqkidvmiu.supabase.co',
-            API_KEY: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InpweHl4a3JnZWFreXFraWR2bWl1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjkwMTI2MTQsImV4cCI6MjA4NDU4ODYxNH0.hb2jTJZ1Q2E1ZDGr4doz-xXQmE7QwB_I_mCyqOdpWEo'
+            URL: 'https://dvijgsezdxehnappichq.supabase.co',
+            API_KEY: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImR2aWpnc2V6ZHhlaG5hcHBpY2hxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjkwOTI5MDAsImV4cCI6MjA4NDY2ODkwMH0.nb6mFkfmPJmIV1t--Uo4wK7BE84ZOTA0W8gF-5FUzD8'
         };
         
         let CONFIG = {
