--- a/index.html
+++ b/index.html
@@ -1300,7 +1300,7 @@
                                         <option value="Producción">Producción</option>
                                         <option value="Almacén">Almacén</option>
                                         <option value="Mantenimiento">Mantenimiento</option>
-                                        <option value="Logística">Logística</option>
+                                        <option value="Aceites">Aceites</option>
                                         <option value="Oficinas">Oficinas</option>
                                         <option value="Laboratorio">Laboratorio</option>
                                         <option value="Externo">Externo</option>
@@ -1405,7 +1405,7 @@
                                     <option value="Producción">Producción</option>
                                     <option value="Almacén">Almacén</option>
                                     <option value="Mantenimiento">Mantenimiento</option>
-                                    <option value="Logística">Logística</option>
+                                    <option value="Aceites">Aceites</option>
                                     <option value="Oficinas">Oficinas</option>
                                 </select>
                                 
@@ -1687,7 +1687,7 @@
                 'Producción': '#3498db',
                 'Almacén': '#2ecc71',
                 'Mantenimiento': '#e74c3c',
-                'Logística': '#f39c12',
+                'Aceites': '#f39c12',
                 'Oficinas': '#9b59b6',
                 'Laboratorio': '#1abc9c',
                 'Externo': '#95a5a6'
@@ -3387,7 +3387,7 @@
         }
         
         function simularDatos() {
-            const sectores = ['Producción', 'Almacén', 'Mantenimiento', 'Logística', 'Oficinas'];
+            const sectores = ['Producción', 'Almacén', 'Mantenimiento', 'Aceites', 'Oficinas'];
             const riesgos = ['Mecánico', 'Eléctrico', 'Químico', 'Ergonómico'];
             const niveles = ['Crítico', 'Alto', 'Medio', 'Bajo'];
             const estados = ['Pendiente', 'En Proceso', 'Reparado'];
