--- a/index.html
+++ b/index.html
@@ -1407,6 +1407,7 @@
                                     <option value="Mantenimiento">Mantenimiento</option>
                                     <option value="Aceites">Aceites</option>
                                     <option value="Jaboneria">Jaboneria</option>
+                                    <option value="Fraccionamiento">Fraccionamiento</option>
                                 </select>
                                 
                                 <select class="form-control" id="filter-risk-level" style="width: 150px;">
