--- a/index.html
+++ b/index.html
@@ -1408,6 +1408,7 @@
                                     <option value="Aceites">Aceites</option>
                                     <option value="Jaboneria">Jaboneria</option>
                                     <option value="Fraccionamiento">Fraccionamiento</option>
+                                    <option value="Externo">Externo</option
                                 </select>
                                 
                                 <select class="form-control" id="filter-risk-level" style="width: 150px;">
